--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
 h1 {
     color:#FFFFFF;
+
+
 }
 
 /** {
     border: solid;
 } */
-
+.header * {
+   /* border:solid; 
+    border-color:#c364fa;
+    border-width: 5.5px;
+    border-radius: 10%;
+*/
+}
 .header{
     background-color:#8917FF;
     display: flex;
     text-align: center;
     justify-content: space-between;
-}
+    
 
+}
+.menu{
+    margin: 100px;
+}
 .site-description{
     display: flex;
     flex-direction: column;
@@ -33,7 +45,32 @@ h1 {
 
 p,h2{
     text-align: center;
+  
 }
 body{
-    background-color:#9015A2;
+    background-color:#64a0fa;
+}
+a:link{
+    color:#64a0fa
+}
+a:visited{
+    color:black;
+}
+.menu a{
+    margin-left:30px
+}
+.item{
+    position:relative;
+}
+.item p{
+    position:absolute;
+ top:50%;
+ left: 50%;
+ transform: translate(-50%,-50%);
+}
+.item:hover p{
+    opacity: 1;
+}
+.item:hover img{
+    opacity: 0.33;
 }
